tests/sources/invalid/types/cast_and_generic_type_errors.fire
// Cast, generic-inference, builtin-arity, and constructor type errors.

class Widget {
    v: int32;

    fn Widget() {
        this.v = 1;
    }
}

// Array literals cannot directly contain arrays
nested: int32[] = [[1], [2]];  //~ ERROR FS-SEM-0010 @19

// Cannot cast an array to a non-string type
arr: int32[] = [1, 2];
a: float64 = arr as float64;  //~ ERROR FS-SEM-0010 @21

// Cannot cast to a non-numeric user type
b: int32 = 5 as Widget;  //~ ERROR FS-SEM-0010 @17

// Cannot cast a non-numeric source type
w: Widget = Widget();  //~ ERROR FS-SEM-0010 @13
c: int32 = w as int32;  //~ ERROR FS-SEM-0010 @17

// Wrong number of explicit generic type arguments
fn first<T, U>(x: T, y: U) -> T {
    return x;
}
d: int32 = first<int32>(1, 2);  //~ ERROR FS-SEM-0010 @12

// Conflicting generic inference
fn pick<T>(x: T, y: T) -> T {
    return x;
}
e: int32 = pick(1, "two");  //~ ERROR FS-SEM-0010 @12
//~^ ERROR FS-SEM-0002 @1

// Builtin arity error
print(1, 2);  //~ ERROR FS-PARSE-0012 @1

// Constructor argument count mismatch
w2: Widget = Widget(1, 2);  //~ ERROR FS-SEM-0010 @14
